--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
   <div class="row justify-content-center pb-5">
     <div class="col-md-12 heading-section text-center ftco-animate">
       <h1 class="big big-2">Projects</h1>
-      <h2 class="mb-4">Our Projects</h2>
+      <h2 class="mb-4">Projects</h2>
       </div>
     </div>
 
