--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
-            <h2 class="mb-4">Contact Me</h2>
+            <h2 class="mb-4">Contact</h2>
             <p>
               <!-- Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia -->
